--- a/my-app/src/components/css/SettingsPage.css
+++ b/my-app/src/components/css/SettingsPage.css
@@ -1,19 +1,19 @@
 .settingsPageTitleContainer{
-	position:absolute;
-	top: 3vh;
-	left: 15vw;
-	box-sizing: content-box;
-	background-color: #FFFFFF;
-	z-index: 1;
-	width: 10vw;
-	height: 5vh;
+	position: absolute;
+    top: 2vh;
+    left: 10vw;
+    box-sizing: content-box;
+    background-color: #FFFFFF;
+    z-index: 1;
+    width: 360px;
+    height: 30px;
 }
 
 .adminSettingsPageTitle{
 	font-family: Arial Black;
     font-style: normal;
     font-weight: 900;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .settingsPageContainer{
