--- a/my-app/src/components/css/SettingsPage.css
+++ b/my-app/src/components/css/SettingsPage.css
@@ -169,6 +169,12 @@
 	padding-bottom: 20px;
 }
 
+.homeButtonAdmin{
+	height: 100px;
+    width: 300px;
+    padding-bottom: 20px;
+}
+
 .contactRequestButton:hover, .editUsersButton:hover, .deactivateAccountButton:hover{
 	transform: scale(1.1);
 }
