--- a/my-app/src/components/css/SettingsPage.css
+++ b/my-app/src/components/css/SettingsPage.css
@@ -1,4 +1,12 @@
-.settingsPageTitleContainer{
+.settingsPageContentS{
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.settingsPageTitleContainerS{
 	position:absolute;
 	top: 3vh;
 	left: 15vw;
@@ -9,35 +17,33 @@
 	height: 5vh;
 }
 
-.settingsPageTitle{
+.settingsPageTitleS{
 	font-family: Arial Black;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
 }
 
-.settingsPageContainer{
+.settingsPageContainerS{
 	position: relative;
 	height: 90vh;
 	width: 95vw;
 	border: 2px solid black;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: auto;
+	margin-top: 5vh;
 	margin-bottom: auto;
 	display: flex;
 	flex-direction: column;
 }
 
-.homeButtonContainer{
-	position: relative;
-	width: 5vw;
-	margin-right: 3vw;
-	margin-left: 87vw;
-	justify-content: right;
+.secondRowContainer{
+	display: flex;
+	flex-direction: row;
+	margin-top: 15vh;
 }
 
-.emailDownloadContainer{
+.emailDownloadContainerS{
 	display: flex;
 	flex-direction: column;
 	margin-left: 0vw;
@@ -125,7 +131,7 @@
 	margin-left: 20vw;
 }
 
-.topButtonsContainer{
+.topButtonsContainerS{
 	margin-top: 0vh;
 }
 
@@ -217,12 +223,6 @@
 	display: flex;
 }
 
-.secondRowContainer{
-	display: flex;
-	flex-direction: row;
-	margin-top: 10vh;
-}
-
 .scrapeHistoryToggle:hover, .advancedSearchToggle:hover, .emailNotifToggle:hover{
 	transform: scale(1.1);
 }
@@ -269,7 +269,7 @@
 	overflow: auto;
 }
 
-.bottomButtonsContainer{
+.bottomButtonsContainerS{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -333,10 +333,20 @@
     background: #0094FF;
     border: 1px solid #000000;
     box-sizing: border-box;
+}
+
+.logoutButtonContainerS{
 	margin-left: 1vw;
 	margin-right: 20vw;
 	margin-bottom: 0px;
 	margin-top: 1vh;
+}
+
+.saveChangesButtonContainerS{
+	margin-left: 72vw;
+	margin-right: 1vw;
+	margin-bottom: 10px;
+	margin-top: 18vh;
 }
 
 .saveChangesButton{
@@ -352,10 +362,6 @@
     background: #0094FF;
     border: 1px solid #000000;
     box-sizing: border-box;
-	margin-left: 72vw;
-	margin-right: 1vw;
-	margin-bottom: 10px;
-	margin-top: 18vh;
 }
 
 .deactivateAccountButton{
