--- a/my-app/src/components/css/AdminSettingsPage.css
+++ b/my-app/src/components/css/AdminSettingsPage.css
@@ -1,3 +1,15 @@
+.accountInScrollBox{
+	list-style-type: none;
+	align-items: center;
+    text-align: left;
+	margin-left: 2vw;
+}
+
+.accountInScrollBoxContainer{
+	height: 6vh;
+	border: 1px solid black;
+}
+
 .settingsPageTitleContainer{
 	position: absolute;
     top: 2vh;
@@ -120,13 +132,14 @@
 }
 
 .emailDownloadForm{
-	margin-top: 0vh;
+	margin-top: -4vh;
 	width: 50vw;
 	margin-left: 20vw;
 }
 
 .topButtonsContainer{
-	margin-top: 0vh;
+	margin-top: -18vh;
+	margin-left: 45vw;
 }
 
 .contactRequestButton{
@@ -263,17 +276,18 @@
 	margin-top: auto;
 	margin-bottom: auto;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 }
 
 .approveScrollBox{
+	flex: 1;
 	height: 25vh;
 	width: 50vw;
 	border: 1px solid #ccc;
 	font: 16px/26px Georgia, Garamond, Serif;
-	overflow: auto;
+	overflow-y: scroll;
 }
 
 .bottomButtonsContainerA{
@@ -375,15 +389,11 @@
     line-height: 20px;
     width: 150px;
     height: 50px;
-    align-items: center;
     text-align: center;
     color: #FFFFFF;
     background: #a4a7a7;
     border: 1px solid #000000;
     box-sizing: border-box;
-	margin-bottom: 0px;
-	margin-top: 1vh;
-	margin-left: 1vw;
 }
 
 .saveChangesButtonContainerA{
@@ -402,11 +412,15 @@
     line-height: 20px;
     width: 150px;
     height: 50px;
+    align-items: center;
     text-align: center;
     color: #FFFFFF;
-    background: #0094FF;
+	background: #0094FF;
     border: 1px solid #000000;
     box-sizing: border-box;
+	margin-bottom: 0px;
+	margin-top: 1vh;
+	margin-left: 1vw;
 }
 
 .deleteButton:hover, .approveButton:hover, .logoutButton:hover, .btn-saveChanges:hover{
