--- a/my-app/src/components/css/AdminSettingsPage.css
+++ b/my-app/src/components/css/AdminSettingsPage.css
@@ -2,50 +2,58 @@
 	list-style-type: none;
     text-align: left;
 	margin-left: 2vw;
+	position: absolute;
+	width: 15vw;
 }
 
 .emailInScrollBox{
 	list-style-type: none;
 	text-align: left;
 	font-size: 12px;
-	margin-top: -2vh;
+	margin-top: 3vh;
 	margin-left: 2vw;
+	position: relative;
+}
+
+.nameContainer{
+	position: relative;
+	width: 10vw;
 }
 
 .btn-containersAccounts{
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	height: 200px;
-	width: 250px;
-	margin-top: -23vh;
-	margin-left: 23vw;
+	height: 10vh;
+	width: 50vw;
+	margin-top: -8vh;
+	margin-left: 20vw;
 }
 
 .btn-approveContainer{
 	position: absolute;
-	height: 40px;
-	width: 80px;
-	margin-top: 10%;
+	height: 35px;
+	width: 55px;
+	margin-top: 5vh;
 }
 .btn-approve{
 	height: 35px;
 	width: 65px;
-	margin-top: 5vh;
-	margin-left: 4vw;
+	margin-top: 0vh;
+	margin-left: 1vw;
 }
 
 .btn-adminContainer{
 	position: absolute;
 	height: 35px;
 	width: 55px;
-	margin-left: 7vw;
-	margin-top: 10%;
+	margin-left: 3vw;
+	margin-top: 5vh;
 }
 .btn-admin{
 	height: 35px;
 	width: 65px;
-	margin-top: 5vh;
+	margin-top: 0vh;
 	margin-left: 4vw;
 }
 
@@ -53,22 +61,23 @@
 	position: absolute;
 	height: 35px;
 	width: 55px;
-	margin-top: 10%;
+	margin-top: 5vh;
+	margin-left: 15vw;
 }
 .btn-banUser{
 	position: absolute;
 	height: 35px;
 	width: 65px;
 	margin-left: 2vw;
-	margin-top: 5vh;
+	margin-top: 0vh;
 }
 
 .btn-deleteContainer{
 	position: absolute;
 	height: 35px;
 	width: 55px;
-	margin-left: 170px;
-	margin-top: 10%;
+	margin-left: 13vw;
+	margin-top: 0vh;
 }
 .btn-delete{
 	height: 35px;
@@ -129,8 +138,8 @@
 }
 
 .emailContainer{
-	width: 50vw;
-	height: 10vh;
+	width: 20vw;
+	height: 3vh;
 	font-family: Arial Black;
     font-style: normal;
 	margin-right: 0vw;
@@ -146,15 +155,6 @@
 	font-size: 16;
 	margin-right: 5vw;
 	width: 6vw;
-}
-
-.downloadText{
-	margin-left: 0vw;
-	font-family: Arial;
-	font-style: normal;
-	font-size: 16;
-	margin-right: 0vw;
-	width: 10vw;
 }
 
 .homeButtonAdmin{
@@ -209,18 +209,18 @@
     font-style: normal;
     font-size: 16px;
 	position: absolute;
-	margin-top: 1vh;
+	margin-top: 20vh;
 	margin-left: 25vw;
 	width: 20vw;
 }
 
 .approveScrollingContainer{
 	position: absolute;
-	height: 200px;
-	width: 670px;
+	height: 35vh;
+	width: 50vw;
 	border: 2px solid black;
-	margin-left: 20vw;
-	margin-right: 20vw;
+	margin-left: 23vw;
+	margin-right: 23vw;
 	margin-top: 20vh;
 	margin-bottom: auto;
 	display: flex;
@@ -231,8 +231,8 @@
 
 .approveScrollBox{
 	flex: 1;
-	height: 200px;
-	width: 670px;
+	height: 35vh;
+	width: 50vw;
 	border: 1px solid #ccc;
 	font: 16px/26px Georgia, Garamond, Serif;
 	overflow-y: scroll;
@@ -273,6 +273,13 @@
     box-sizing: border-box;
 }
 
+.btn-deactivateContainer{
+	position: absolute;
+	height: 10vh;
+	width: 12vw;
+	margin-top: -4vh;
+	margin-left: 78vw;
+}
 .deactivateAccountButton{
 	font-family: Arial Black;
     font-style: normal;
@@ -286,33 +293,6 @@
     background: #a4a7a7;
     border: 1px solid #000000;
     box-sizing: border-box;
-}
-
-.btn-deactivateContainer{
-	position: absolute;
-	height: 50px;
-	width: 150px;
-	margin-top: -4vh;
-	margin-left: 78vw;
-}
-
-.btn-saveChanges{
-	font-family: Arial Black;
-    font-style: normal;
-	font-weight: 800;
-    font-size: 15px;
-    line-height: 20px;
-    width: 150px;
-    height: 50px;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-	background: #0094FF;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-	margin-bottom: 0px;
-	margin-top: 1vh;
-	margin-left: 1vw;
 }
 
 .logoutButton:hover{
