--- a/my-app/src/components/css/RegisterAccountPage.css
+++ b/my-app/src/components/css/RegisterAccountPage.css
@@ -49,16 +49,19 @@
 	display: flex;
 	flex-direction: row;
 	height: 10vh;
+	margin-top: 2vh;
 }
 .passwordContainer{
 	display: flex;
 	flex-direction: row;
 	height: 10vh;
+	margin-top: 2vh;
 }
 .passwordConfirmContainer{
 	display: flex;
 	flex-direction: row;
 	height: 10vh;
+	margin-top: 2vh;
 }
 
 .emailTextR{
