Hide Forgot Password, Finished setup of Download feature

--- a/my-app/src/components/css/LoginPage.css
+++ b/my-app/src/components/css/LoginPage.css
@@ -168,6 +168,7 @@
     }
     .forgotPasswordButton{
         margin-bottom: 20px;
+        visibility: hidden;
     }
     .loginButton{
         margin-bottom: 20px;
