--- a/my-app/src/components/css/LoginPage.css
+++ b/my-app/src/components/css/LoginPage.css
@@ -128,6 +128,7 @@
     color: #9C9C9C;
     background-color: transparent;
     border: none;
+    visibility: hidden;
 }
 .loginButton{
     font-family: Arial Black;
