--- a/my-app/src/components/css/RegisterAccountPage.css
+++ b/my-app/src/components/css/RegisterAccountPage.css
@@ -28,6 +28,7 @@
 	margin-bottom: auto;
 	display: flex;
 	flex-direction: column;
+	justify-content: left;
 }
 
 .registerAccountPageTitle{
@@ -37,6 +38,14 @@
     font-size: 16px;
 	width: 20vw;
 	height: 5vh;
+}
+
+.formContainer{
+	display: flex;
+	justify-content:space-evenly;
+	align-items: center;
+
+	margin-top: 150px;
 }
 
 .emailContainerR{
@@ -105,7 +114,7 @@
 	text-align: left;
 }
 .nameInputBoxR{
-	width: 300px;
+	width: 800px;
 	height: 30px;
 	font-weight: 900;
     font-size: 16px;
